Capstone-Project/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: {name: taskboard, namespace: taskboard}
spec:
  ingressClassName: nginx
  rules:
    - host: taskboard.local
      http:
        paths:
          - {path: /api, pathType: Prefix, backend: {service: {name: taskboard-backend, port: {number: 80}}}}
          - {path: /, pathType: Prefix, backend: {service: {name: taskboard-frontend, port: {number: 80}}}}
